# maztree

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  ancestor.ts  categorize.ts  format.ts  treemap.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: bench_scan.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scan.rs
src/components/: Sidebar.tsx  Toolbar.tsx  TreeList.tsx  Treemap.tsx
