[package]
name = "maztree"
version = "0.1.0"
description = "A blazing-fast disk usage analyzer with a glass UI"
authors = ["OkilSaber"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maztree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
sysinfo = "0.32"

# `tauri dev` builds this profile. Disk scanning is a tight syscall/stat loop
# that debug builds (opt-level 0) run 10-30x slower than release — enough to
# make full-disk scans feel broken during development. opt-level 2 keeps
# incremental rebuilds of our own code reasonably fast while making the hot
# loop fast enough to actually test against.
[profile.dev]
opt-level = 2

